[package]
name = "actix-rate-limit"
version = "0.1.0"
authors = ["Kazuhiro Kobayashi <orihuzakihsayabok@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
actix-redis = { git = "https://github.com/Idein/actix-redis-cluster.git", branch = "master" }
redis-async = "*"
redis = "0.9.1"
mdo = "0.3"
mdo-future = "0.2"
futures = "0.1"
